<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.europeana.metis</groupId>
  <artifactId>metis-normalization</artifactId>
  <version>18-SNAPSHOT</version>

  <scm>
    <url>https://github.com/europeana/metis-normalization</url>
    <connection>scm:git:https://github.com/europeana/metis-normalization</connection>
    <developerConnection>scm:git:https://github.com/europeana/metis-normalization</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>

    <!--Plugins-->
    <version.maven.compiler.plugin>3.14.0</version.maven.compiler.plugin>
    <version.surefire.plugin>3.5.3</version.surefire.plugin>
    <version.failsafe.plugin>3.5.3</version.failsafe.plugin>
    <version.maven.release.plugin>2.5.3</version.maven.release.plugin>

    <!--Internal-->
    <version.metis-schema>15-SNAPSHOT</version.metis-schema>

    <!--External-->
    <version.spring.boot>4.0.1</version.spring.boot>
    <version.ibm.icu4j>69.1</version.ibm.icu4j>
    <version.commons.lang3>3.12.0</version.commons.lang3>
    <version.commons.io>2.9.0</version.commons.io>
    <version.jena.iri>4.7.0</version.jena.iri>
    <version.jena.core>4.7.0</version.jena.core>
    <version.jericho-html>3.4</version.jericho-html>
    <version.wiremock>3.13.2</version.wiremock>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${version.spring.boot}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>eu.europeana.metis</groupId>
      <artifactId>metis-schema</artifactId>
      <version>${version.metis-schema}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jackson</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ibm.icu</groupId>
      <artifactId>icu4j</artifactId>
      <version>${version.ibm.icu4j}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${version.commons.lang3}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${version.commons.io}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.wiremock</groupId>
      <artifactId>wiremock-standalone</artifactId>
      <version>${version.wiremock}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>tools.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-xml</artifactId>
    </dependency>
    <dependency>
      <groupId>tools.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
    </dependency>
    <dependency>
      <groupId>net.htmlparser.jericho</groupId>
      <artifactId>jericho-html</artifactId>
      <version>${version.jericho-html}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-iri</artifactId>
      <version>${version.jena.iri}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-core</artifactId>
      <version>${version.jena.core}</version>
    </dependency>
  </dependencies>

  <repositories>
    <!--Release repositories-->
    <repository>
      <id>libs-release</id>
      <name>libs-release</name>
      <url>https://artifactory-prod.eanadev.org/artifactory/libs-release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <!--Snapshot repositories-->
    <repository>
      <id>libs-snapshot</id>
      <name>libs-snapshot</name>
      <url>https://artifactory-prod.eanadev.org/artifactory/libs-snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>artifactory-prod.eanadev.org</id>
      <name>artifactory-prod.eanadev.org-releases</name>
      <url>https://artifactory-prod.eanadev.org/artifactory/libs-release-local</url>
    </repository>
    <snapshotRepository>
      <id>artifactory-prod.eanadev.org</id>
      <name>artifactory-prod.eanadev.org-snapshots</name>
      <url>https://artifactory-prod.eanadev.org/artifactory/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${version.maven.compiler.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${version.surefire.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${version.failsafe.plugin}</version>
          <configuration>
            <failIfNoTests>false</failIfNoTests>
            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>${version.maven.release.plugin}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
